--- a/css/styles.css
+++ b/css/styles.css
@@ -178,6 +178,9 @@ a:hover, a:focus {
 .pb50 {
 	padding-bottom: 50px;
 }
+.card{
+	margin:10px;
+}
 
 footer {
 	background: #000;
@@ -219,7 +222,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 	color: black;
 	padding: 22px 16px;
 	width: 100%;
-	border: none;
+	border: 1px solid #ccc;
 	outline: none;
 	text-align: left;
 	cursor: pointer;
