--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ body {
 .logoimage {
 	height: 80px;
 }
+.companyname {
+	color: var(--secondcolor);
+	font-size:30px;
+}
 .navbar {
 	background-color: rgba(255,255,255,0);
 	padding: 10px 0;
@@ -55,7 +59,7 @@ a:hover, a:focus {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../images/back.jpg) no-repeat center top;
+	background: url(../images/banner1.jpg) no-repeat center top;
 	background-position: center center;
 	min-height: 600px;
 	width: 100%;
