--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ a:hover, a:focus {
    ========================================================================== */
 
 #headerwrap {
-	background: url(../images/banner1.jpg) no-repeat center top;
+	background: url(../images/aslbanner.png) no-repeat center top;
 	background-position: center center;
 	min-height: 600px;
 	width: 100%;
