--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 :root {
-	--maincolor: #57a4f2;
+	--maincolor: #13416F;
 	--secondcolor: #fff466; 
 }
 
@@ -45,6 +45,14 @@ border-radius: 5px 5px 5px 5px;
 	background-color: rgba(255,255,255,1);
 	padding: 0;
 	border-bottom: 1px solid #000;
+}
+
+.img-fluid {
+	border-radius: 5%;
+}
+
+.card {
+	padding: 20px;
 }
 
 /* Links */
@@ -125,7 +133,7 @@ a:hover, a:focus {
 }
 
 .space {
-	padding: 20px 0;
+	padding: 10px 0;
 }
 .headspace {
 	padding: 20px 0;
@@ -149,7 +157,14 @@ a:hover, a:focus {
 	min-height: 80px;
 }
 .btn-asl{
+	background-color: var(--maincolor);
+	color: var(--secondcolor);
+	padding: 10px 50px;
+}
+
+.btn-asl:hover, .btn-asl:focus{
 	background-color: var(--secondcolor);
+	color: var(--maincolor);
 }
 
 #about {
@@ -206,6 +221,7 @@ a:hover, a:focus {
 
 footer {
 	background: #000;
+	padding:10px;
 }
 .copyright {
 	line-height: 40px;
@@ -217,7 +233,7 @@ footer {
 	color: #FFF;
 }
 #contentyear::before {
-	content: "2024";
+	content: "2025";
 }
 
 ul.social-buttons li {
@@ -233,31 +249,16 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 } 
 
 .tab{
-	padding: 0;
-	border: 1px solid #ccc;
-  background-color: var(--maincolor);
-  height: 600px;
+	padding: 10px 0;
+  height: 100%;
 }
-.tab button {
-	display: block;
-	background-color: inherit;
-	color: black;
-	padding: 22px 16px;
-	width: 100%;
-	border: 1px solid #ccc;
-	outline: none;
+.tab a {
 	text-align: left;
-	cursor: pointer;
-	transition: 0.3s;
-	font-size: 17px;
-  }
-  .tab button:hover {
-	background-color: #ddd;
-  }
-  
-  /* Create an active/current "tab button" class */
-  .tab button.active {
-	background-color: var(--secondcolor);
+	padding: 10px 20px;
+}
+.tab a.active {
+	background-color: var(--maincolor);
+	color: var(--secondcolor);
   }
 
   .tabcontent {
