--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 .companyname {
 	color: var(--secondcolor);
 	font-size:30px;
+	text-shadow: 1px 0px #000000;
 }
 .navbar {
 	background-color: rgba(255,255,255,0);
@@ -88,6 +89,7 @@ a:hover, a:focus {
 #headerwrap {
 	background: url(../images/aslbanner.png) no-repeat center top;
 	background-position: center center;
+	margin-top: 100px;
 	min-height: 600px;
 	width: 100%;
 	background-size: cover;
